--- a/1 - Ejercicio 7.html
+++ b/1 - Ejercicio 7.html
@@ -10,6 +10,8 @@
 
     <h1>Cómo mejorar tu productividad trabajando desde casa</h1>
 
+    <p>oye, esto es nuevo</p>
+
     <p>Trabajar desde casa puede ser todo un reto si no se establecen unas reglas básicas.</p>
     <p>Es fundamental contar con un espacio adecuado, mantener una rutina y tener horarios definidos.</p>
     <p>En este artículo, te daremos algunos consejos para que puedas ser más productivo.</p>
